[package]
name = "assets-rs"
version = "0.1.0"
authors = ["Paweł Bojanowski <pawel.bojanowski@saucelabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }
smol = { version = "0.1", features = ["tokio02"] }
